--- a/Documentation/Sudoku.tex
+++ b/Documentation/Sudoku.tex
@@ -4,12 +4,12 @@
     \begin{tabular}{l p{9cm} c}
         & & \includegraphics[width=0.4\textwidth]{Abbildungen/W-HS} \\
         & & \textbf{Fachbereich Maschinenbau} \\
-
     \end{tabular}
-    \vspace{1.5cm}}
-\subject{IBV-Projekt\vspace{3cm}}
+    \vspace{1.5cm}
+}
+\subject{IBV-Projekt\vspace{2cm}}
 
-\title{Sudoku-CV}
+\title{\includegraphics[width=0.4\textwidth]{../Resources/Icon.pdf}}
 \subtitle{Lösen von 9x9 Sudokus mit der Webcam\vspace{3cm}}
 
 \author{
@@ -28,17 +28,8 @@
 \pagenumbering{arabic}
 \newpage
 
-\include{Einleitung}
-\include{Methodik}
+\input{Einleitung}
+\input{Methodik}
 \include{Quelltext}
-
-% Logo
-% Einleitung
-% Methodik
-% Verifikation
-% Installation
-% Kompletter Quelltext
-% Anhang / CD
-
 
 \end{document}
