--- a/Documentation/Quelltext.tex
+++ b/Documentation/Quelltext.tex
@@ -1,8 +1,8 @@
 % !TEX root = Sudoku.tex
 \section{Quelltext}
 
-\subsection{\texttt{main.py}}
-\lstinputlisting{../main.py}
+\subsection{\texttt{sudoku-cv.py}}
+\lstinputlisting{../sudoku-cv.py}
 
 \subsection{\texttt{sudoku.py}}
 \lstinputlisting{../sudoku/sudoku.py}
