--- a/Documentation/Methodik.tex
+++ b/Documentation/Methodik.tex
@@ -305,7 +305,7 @@ Für die Ziffererkennung werden zunächst Einzelbilder der Zellen benötigt.
 Die Kreuzungspunkte liegen in diesem Schritt bereits sortiert vor.
 Als Referenzkoordinate für jede Zelle wird jeweils der obere linke Eckpunkt betrachtet.
 Alle Eckpunkte auf dem rechten Rand werden ausgelassen.
-Ist der obere, linke Eckpunkt einer Zelle gegeben, liegt der rechte obere Eckpunkt eine Position, der untere linke Zehn und der untere rechte Elf Positionen weiter in der Liste der Kreuzungspunkte.
+Ist der obere, linke Eckpunkt einer Zelle gegeben, liegt der rechte obere Eckpunkt eine Position, der untere linke zehn und der untere rechte elf Positionen weiter in der Liste der Kreuzungspunkte.
 
 Sobald die Eckpunkte einer Zelle bekannt sind, werden diese perspektivisch zu einem Quadrat transformiert, wobei die fehlerbehafteten Randbereiche abgeschnitten werden.
 
