--- a/Documentation/Quelltext.tex
+++ b/Documentation/Quelltext.tex
@@ -4,5 +4,7 @@
 \subsection{\texttt{sudoku-cv.py}}
 \lstinputlisting{../sudoku-cv.py}
 
+\newpage
+
 \subsection{\texttt{sudoku.py}}
 \lstinputlisting{../sudoku/sudoku.py}
